plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

sourceCompatibility = 13
targetCompatibility = 13

version = '0.0.1'
group = 'com.akame'
mainClassName = "com.akame.checkers.Main"

javafx {
    version = "13.0.2"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}